- removed AC_CANONICAL_TARGET from configure.ac (2024/04/20 MS)
- updated icon location (2024/04/20 MS)
- updated LTris appstream metadata (2024/04/20 Matthias Mailänder)

1.3:
- cpu algorithm uses hold option (2024/02/29 MS)
- tweaked cpu algorithm (2024/02/27 MS)

1.2.8:
- fixed bug in sending lines in multiplayer (2024/02/17 MS)
- tweaked multiplayer defaults (2024/02/17 MS)
- added option to customize cpu drop speed (2024/02/17 MS)
- do not show special piece on lock delay if soft drop pressed (2024/02/17 MS)
- properly insert/lock pieces if dropping more than one tile (2024/02/17 MS)

1.2.7:
- use SDL_CONFIG instead of sdl_config (2023/09/04 Artemys)
- added compile, removed intl and acinclude.m4 (2023/09/04 MS)
- properly install icons (2023/02/03 MS)

1.2.6:
- reset lock delay on hold (2022/10/02 Miroslav Lichvar)

1.2.5:
- added hold feature (2022/06/17 MS)
- updated german translation (2022/06/17 MS)
- fixed crash with odd resolutions (2022/06/08 MS)

1.2.4:
- replaced DAS option with auto shift delay/speed options (2022/04/14 MS)
- allow q key for controls (2021/11/05 MS) 

1.2.3:
- simplified cross compiling (2021/04/10 MS)
- added gamepad support (not configurable via menu yet) (2021/04/05 MS)
- show three pieces as preview for modern style (2021/04/03 MS)
- updated some menu hints (2021/04/03 MS)
- added configure option --with-configdir (2021/04/03 MS) 
- added ltris.appdata.xml (2021/04/03 SB)
- show stats only for game modes with one bowl (2021/04/03 MS)

1.2.2:
- don't redraw stack in pause after animation (2020/12/28 MS)
- avoid odd resolutions like 1366x768 (2020/12/28 MS)
- console option for fullscreen (2020/12/28 MS)
- cleaned up configure (2020/12/28 MS)
- improved wall kicks (2020/12/25 MS)
- added lock delay (2020/12/25 MS)
- allow more keys for controls (2020/12/25 MS)
- added hyper DAS option (2020/12/25 MS)

1.2.1:
- fixed build failure with gcc 4.8 (2020/07/27 Fabrice Fontaine)